--- a/components/navbar.css
+++ b/components/navbar.css
@@ -1,22 +1,3 @@
-.navbar {
-  color: black;
-  display: flex;
-}
-
-.nav-links {
-  font-family: 'Open Sans', sans-serif;
-  display: flex;
-  align-items: center;
-  font-size: 16px;
-}
-
 .navbar a {
-  color: black;
-  text-decoration: none;
-  margin-right: 80px;
-}
-
-.navbar h1 {
-  font-family: 'Roboto Mono', monospace;
-  margin-right: 20px;
+  color: white!important;
 }
