--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
 @import url("components/navbar.css");
 @import url("components/avatar.css");
 @import url("components/images.css");
-
+@import url("components/banner.css");
+@import url("components/my-container.css");
+@import url("components/footer.css");
 
 body {
   margin: 0;
-  padding: 30px;
+}
+
+
+
+body p {
+  margin: 0;
 }
